[12] simplify repository